# glm_analysis

./: .gitattributes  .gitignore  README.md  add_to_launch.sh  analyze_lev1_v4.py  analyze_lev1_v4_MNI.py  clean_launch.sh  download.sh  launch_all_lev2_sherlock.sh  mount.sh  pyproject.toml  requirements.txt  subs.txt  symlink.sh  task_cuedTS_rtmodel_rt_centered_fixed-effects.batch  task_directedForgetting_rtmodel_rt_centered_fixed-effects.batch  task_flanker_rtmodel_rt_centered_fixed-effects.batch  task_goNogo_rtmodel_rt_centered_fixed-effects.batch  task_nBack_rtmodel_rt_centered_fixed-effects.batch  task_shapeMatching_rtmodel_rt_centered_fixed-effects.batch  task_spatialTS_rtmodel_rt_centered_fixed-effects.batch  task_stopSignal_rtmodel_rt_centered_fixed-effects.batch
apptainer_images/: README.md
batch/: fmriprep.sbatch  glm.sbatch  mriqc.sbatch  pull_images.sbatch  qsiprep.sbatch  setup_env.sh  tedana.sbatch
data/test_data/: README.md
data/test_data/sub-s1273/ses-02/: sub-s1273_ses-02_task-cuedTS_run-1_desc-confounds_timeseries.tsv  sub-s1273_ses-02_task-cuedTS_run-1_events.tsv
data/test_data/sub-s1273/ses-04/: sub-s1273_ses-04_task-cuedTS_run-1_desc-confounds_timeseries.tsv  sub-s1273_ses-04_task-cuedTS_run-1_events.tsv
data/test_data/sub-s1273/ses-06/: sub-s1273_ses-06_task-cuedTS_run-1_desc-confounds_timeseries.tsv  sub-s1273_ses-06_task-cuedTS_run-1_events.tsv
data/test_data/sub-s1273/ses-08/: sub-s1273_ses-08_task-cuedTS_run-1_desc-confounds_timeseries.tsv  sub-s1273_ses-08_task-cuedTS_run-1_events.tsv
data/test_data/sub-s1273/ses-10/: sub-s1273_ses-10_task-cuedTS_run-1_desc-confounds_timeseries.tsv  sub-s1273_ses-10_task-cuedTS_run-1_events.tsv
src/network_analysis/: __init__.py
src/network_analysis/glm/: config.py  create_brain_maps.py  glm.py
src/network_analysis/rest/: seed_to_voxel.py
src/network_analysis/tedana/: 01_remove_dummy_trs.py  02_denoise_data.py  03_tedana_transform.py  04_prepare_glm_directory.py
src/network_glm/: config.py  create_carpet_plots.py  glm.py
src/network_glm/quality_control/: __init__.py
tests/: test_main.py
utils_lev1/: first_level_designs_new_event_files.py  qa.py
